projects/simple-rest-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: pi
spec:
  selector:
    app: hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
